--- a/src/telaVisao/TelaDeClientes.form
+++ b/src/telaVisao/TelaDeClientes.form
@@ -644,6 +644,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="Txt_Caminho_Foto">
           <Properties>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Arial" size="12" style="0"/>
             </Property>
