--- a/src/telaVisao/TelaDeVeiculos.form
+++ b/src/telaVisao/TelaDeVeiculos.form
@@ -75,9 +75,9 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="Bt_Vlt_Veiculos" min="-2" pref="42" max="-2" attributes="0"/>
-                  <EmptySpace pref="279" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="279" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -382,12 +382,12 @@
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="Txt_Pr_Compra" max="32767" attributes="0"/>
+                                  <Component id="Txt_Pr_Compra" pref="130" max="32767" attributes="0"/>
                                   <Component id="Txt_Pr_Venda" alignment="0" max="32767" attributes="0"/>
                                   <Component id="Txt_Ano_Fab" alignment="0" max="32767" attributes="0"/>
                                   <Component id="Txt_Ano_Modelo" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="CB_Combustivel" alignment="0" pref="130" max="32767" attributes="0"/>
                                   <Component id="Txt_km" alignment="1" max="32767" attributes="0"/>
+                                  <Component id="CB_Combustivel" alignment="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
@@ -475,12 +475,12 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="11" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="CB_Combustivel" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                                   <Component id="jLabel13" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="CB_Combustivel" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
@@ -617,13 +617,8 @@
             </Component>
             <Component class="javax.swing.JComboBox" name="CB_Tipo">
               <Properties>
-                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="4">
-                    <StringItem index="0" value="Item 1"/>
-                    <StringItem index="1" value="Item 2"/>
-                    <StringItem index="2" value="Item 3"/>
-                    <StringItem index="3" value="Item 4"/>
-                  </StringArray>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="new javax.swing.DefaultComboBoxModel(TipoDeVeiculo.values())" type="code"/>
                 </Property>
               </Properties>
               <Events>
@@ -636,12 +631,7 @@
             <Component class="javax.swing.JComboBox" name="CB_Modelo">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="4">
-                    <StringItem index="0" value="Item 1"/>
-                    <StringItem index="1" value="Item 2"/>
-                    <StringItem index="2" value="Item 3"/>
-                    <StringItem index="3" value="Item 4"/>
-                  </StringArray>
+                  <StringArray count="0"/>
                 </Property>
               </Properties>
               <Events>
@@ -654,25 +644,6 @@
             <Component class="javax.swing.JFormattedTextField" name="Txt_Ano_Fab">
             </Component>
             <Component class="javax.swing.JFormattedTextField" name="Txt_Ano_Modelo">
-            </Component>
-            <Component class="javax.swing.JComboBox" name="CB_Combustivel">
-              <Properties>
-                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="5">
-                    <StringItem index="0" value="Gasolina"/>
-                    <StringItem index="1" value="Etanol"/>
-                    <StringItem index="2" value="GNV"/>
-                    <StringItem index="3" value="Diesel"/>
-                    <StringItem index="4" value="Eletrico"/>
-                  </StringArray>
-                </Property>
-              </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CB_CombustivelActionPerformed"/>
-              </Events>
-              <AuxValues>
-                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-              </AuxValues>
             </Component>
             <Component class="javax.swing.JFormattedTextField" name="Txt_km">
             </Component>
@@ -739,6 +710,26 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Preco de Compra:"/>
               </Properties>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="CB_Combustivel">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="6">
+                    <StringItem index="0" value="GASOLINA"/>
+                    <StringItem index="1" value="DIESEL"/>
+                    <StringItem index="2" value="FLEX"/>
+                    <StringItem index="3" value="ELETRICO"/>
+                    <StringItem index="4" value="GNV"/>
+                    <StringItem index="5" value="ETANOL"/>
+                  </StringArray>
+                </Property>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CB_CombustivelActionPerformed"/>
+              </Events>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
